// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. source 1`] = `

const MySource = ''
function ScopedFunction () {
  /* @source MySource */ const foo = 'bar' /* @source MySource */
}

      ↓ ↓ ↓ ↓ ↓ ↓

const MySource = 'const foo = \\'bar\\';';
function ScopedFunction() {
  /* @source MySource */const foo = 'bar'; /* @source MySource */
}

`;

exports[`2. source 1`] = `

function ScopedFunction () {
  const MySource = ''
  /* @source MySource */ const foo = 'bar' /* @source MySource */
}

      ↓ ↓ ↓ ↓ ↓ ↓

function ScopedFunction() {
  const MySource = 'const foo = \\'bar\\';';
  /* @source MySource */const foo = 'bar'; /* @source MySource */
}

`;

exports[`3. source 1`] = `

const MySource = ''
/* @source MySource */ const foo = 'bar' /* @source MySource */

      ↓ ↓ ↓ ↓ ↓ ↓

const MySource = 'const foo = \\'bar\\';';
/* @source MySource */const foo = 'bar'; /* @source MySource */

`;

exports[`4. source 1`] = `

let MySource
/* @source MySource */ const foo = 'bar' /* @source MySource */

      ↓ ↓ ↓ ↓ ↓ ↓

let MySource = 'const foo = \\'bar\\';';
/* @source MySource */const foo = 'bar'; /* @source MySource */

`;

exports[`5. source 1`] = `

let MySource
// @source MySource
const MyComponent = () => (
  console.log('Hello!')
)
// @source MySource

      ↓ ↓ ↓ ↓ ↓ ↓

let MySource = 'const MyComponent = () => console.log(\\'Hello!\\');';
// @source MySource
const MyComponent = () => console.log('Hello!');
// @source MySource

`;

exports[`6. source 1`] = `

const MySource = ''
// @source MySource
const MyComponent = () => (
  console.log('Hello!')
)
// @source MySource

      ↓ ↓ ↓ ↓ ↓ ↓

const MySource = 'const MyComponent = () => console.log(\\'Hello!\\');';
// @source MySource
const MyComponent = () => console.log('Hello!');
// @source MySource

`;

exports[`7. source 1`] = `

let MySource
let MyOtherSource
// @source MySource
const MyComponent = () => (
  console.log('Hello!')
)
// @source MySource
// @source MyOtherSource
const MyComponent2 = () => (
  console.log('Hello 2!')
)
// @source MyOtherSource

      ↓ ↓ ↓ ↓ ↓ ↓

let MySource = 'const MyComponent = () => console.log(\\'Hello!\\');';
let MyOtherSource = 'const MyComponent2 = () => console.log(\\'Hello 2!\\');';
// @source MySource
const MyComponent = () => console.log('Hello!');
// @source MySource
// @source MyOtherSource
const MyComponent2 = () => console.log('Hello 2!');
// @source MyOtherSource

`;

exports[`8. source 1`] = `

const MySource = ''
// @source MySource
// @source MySource

      ↓ ↓ ↓ ↓ ↓ ↓

const MySource = '';
// @source MySource
// @source MySource

`;

exports[`9. source 1`] = `

let MySource
// @source MySource
// @source MySource

      ↓ ↓ ↓ ↓ ↓ ↓

let MySource = "";
// @source MySource
// @source MySource

`;

exports[`10. source 1`] = `

let MySource = 'I should be the here'
/* @source */ const foo = 'bar' /* @source */

      ↓ ↓ ↓ ↓ ↓ ↓

let MySource = 'I should be the here';
/* @source */const foo = 'bar'; /* @source */

`;

exports[`11. source 1`] = `

let MySource = 'I should be the here'
/* other comment */ const foo = 'bar' /* other comment */

      ↓ ↓ ↓ ↓ ↓ ↓

let MySource = 'I should be the here';
/* other comment */const foo = 'bar'; /* other comment */

`;

exports[`12. source 1`] = `

/* @source MySource */ const foo = 'bar' /* @source MySource */

      ↓ ↓ ↓ ↓ ↓ ↓

/* @source MySource */const foo = 'bar'; /* @source MySource */

`;

exports[`13. source 1`] = `

/* other comment */ const foo = 'bar' /* other comment */

      ↓ ↓ ↓ ↓ ↓ ↓

/* other comment */const foo = 'bar'; /* other comment */

`;

exports[`14. source 1`] = `

let MySources
let MySource2
let MySource3
let MySource4

/* @source MySources */

if (true) {
  // do this
}
const MyComponent = () => (
  /* @source MySource2 */
  console.log('Hello!')
  /* @source MySource2 */

)
const AnotherComponent = () => (
  // @source MySource3
  console.log('Hello Again!')
  // @source MySource3
)

/* @source MySource4 */ const aVariable = 'Hello!' /* @source MySource4 */

/* @source MySources */

const noSource = 'please!'

      ↓ ↓ ↓ ↓ ↓ ↓

let MySources = 'if (true) {// do this\\n}\\n\\nconst MyComponent = () => /* @source MySource2 */console.log(\\'Hello!\\') /* @source MySource2 */;\\n\\nconst AnotherComponent = () => // @source MySource3\\nconsole.log(\\'Hello Again!\\') // @source MySource3\\n;\\n\\nconst aVariable = \\'Hello!\\';';
let MySource2 = 'console.log(\\'Hello!\\');';
let MySource3 = 'console.log(\\'Hello Again!\\');';
let MySource4 = 'const aVariable = \\'Hello!\\';';

/* @source MySources */

if (true) {
  // do this
}
const MyComponent = () =>
/* @source MySource2 */
console.log('Hello!')
/* @source MySource2 */

;
const AnotherComponent = () =>
// @source MySource3
console.log('Hello Again!')
// @source MySource3
;

/* @source MySource4 */const aVariable = 'Hello!'; /* @source MySource4 */

/* @source MySources */

const noSource = 'please!';

`;

exports[`15. source 1`] = `

let MySource
const MyComponent = () => (
  // @source MySource
  console.log('Hello!')
  // @source MySource
)

      ↓ ↓ ↓ ↓ ↓ ↓

let MySource = 'console.log(\\'Hello!\\');';
const MyComponent = () =>
// @source MySource
console.log('Hello!')
// @source MySource
;

`;

exports[`16. source 1`] = `

const MyComponent = () => (
  // @source MySource
  console.log('Hello!')
  // @source MySource
)

      ↓ ↓ ↓ ↓ ↓ ↓

const MyComponent = () =>
// @source MySource
console.log('Hello!')
// @source MySource
;

`;
